# accel-utf8

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindModule.cmake
include/accel/: utf8  utf8.h
tests/: CMakeLists.txt  utf8_test.cpp
